src/TabBar-style.css
/* Font Imports */
@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Chango&family=Molle&family=Quicksand:wght@300..700&display=swap');
/* Styles */

.wrapper {
    /* Flex */
    display: flex;
    flex-direction: column;

    /* Appearance */
    gap: 0.5rem;
    padding: 1rem 1rem 0rem 1rem;
    border-radius: 0.5rem;
    background-color: snow;

    /* Positioning */
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    overflow-y: scroll;
    overflow-x: hidden;
}
  
.tab-list {
    display: flex;
    justify-content: center;
    align-items: center;
}
  
.tab {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.5rem;
    white-space: nowrap;
    border-radius: 50rem;
    border-style: none;
    padding-left: 1rem;
    padding-right: 1rem;
    line-height: 1.5rem;
    text-decoration-line: none;

    /* Appearance */
    background-color: snow;
    color: #2e2d2d;
    font-family: "Quicksand", serif;
    font-size: 1rem;
    font-style: normal;
}
  
.tab:hover {
    background-color: rgb(0 0 0 / 20%);
}
  
.tab[aria-selected="true"] {
    text-decoration-line: underline;
    background-color: #EDC4CF;
}
  
.tab:hover[aria-selected="true"] {
    background-color: rgb(0 0 0 / 20%);
}
  
.tab[data-focus-visible] {
    outline-style: solid;
}

.panels {
    padding: 1rem;
    flex-grow: 1;
}


/* Tab Content */

.tab-wrapper {
  background-color: snow;
  justify-content: center;
  align-items: center;
}

.home-tab {
  color: #B0697F !important;
  font-size: 1.5rem;  /* Mobile Only */
  font-family: "Chango", serif;
  font-weight: 400;
  font-style: normal;
}

.tab-img {
  max-width: 35vw;
}


/* Sizing for Desktop: */
@media only screen and (min-width: 768px) {

  .home-tab {
    font-size: 4rem !important;
  }

  .tab-list {
    gap: 1rem;
  }

  .tab-img {
    max-width: 25vw;
  }

  .tab {
    font-size: 1.25rem;
  }
}

.text-block {
  padding-top: 3rem;
  padding-bottom: 4rem;
  padding-left: 50rem;
  padding-right: 50rem;
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  text-align: left;
}

.center-text {
  text-align: center;
}
  

